Fixed scrollbar issue in popup windows and minor code tidy ups and commenting

--- a/style.css
+++ b/style.css
@@ -45,6 +45,8 @@ h1 {
     z-index: 1000; 
     border: 1px solid silver; 
     background-color: #f0f0f0;
+    opacity: 0.9;
+    filter: alpha(opacity=90);
 }
 
 #help {
